# cardano-shell

./: .gitignore  .stack-to-nix.cache  .travis.yml  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  ChangeLog.md  Makefile  PLAN.md  README.md  README.rst  basic-tracer.nix  bors.toml  cabal  cabal.project  canonical-json.nix  cardano-prelude.nix  cardano-shell.cabal  cardano-shell.nix  cardano-sl-x509.nix  check_coverage.sh  config.nix  configuration.md  default.nix  iohk-monitoring-basic-tracer.nix  iohk-monitoring-contra-tracer.nix  iohk-monitoring.nix  libyaml.nix  log-config.yaml  nixpkgs.nix  package.yaml  release.nix  shell.nix  snapshot.yaml  stack-hpc-coveralls.nix  stack-nix.yaml  stack-shell.nix  stack.yaml  test.nix  updater-test-win.nix
.buildkite/: pipeline.yml
.buildkite/hooks/: pre-command
app/: Main.hs  daedalus-ipc.hs
app/Cardano/Shell/Features/: Logging.hs  Networking.hs
app/Launcher/: Main.hs
app/NodeIPC/: Client.hs  Main.hs  Server.hs  client.js  server.js
app/NodeIPCClient/: Main.hs  server.js
app/NodeIPCServer/: Main.hs  client.js
cardano-launcher/: README.md  cardano-launcher.cabal
cardano-launcher/app/: Main.hs
cardano-launcher/app/Mocks/: Daedalus.hs  Installer.hs
cardano-launcher/configuration/launcher/: launcher-config-demo.windows.yaml  launcher-config-mainnet.linux.yaml  launcher-config-mainnet.macos64.yaml  launcher-config-staging.linux.yaml  launcher-config-staging.macos64.yaml  launcher-config-testnet.linux.yaml  launcher-config.demo.yaml
cardano-launcher/configuration/launcher/jormungandr/: launcher-config-qa.linux.yaml  launcher-config-qa.windows.yaml
cardano-launcher/src/Cardano/Shell/: Application.hs  CLI.hs  Configuration.hs  Environment.hs  Launcher.hs  Template.hs  Types.hs
cardano-launcher/src/Cardano/Shell/Launcher/: Types.hs
cardano-launcher/src/Cardano/Shell/Update/: Lib.hs  Types.hs
cardano-launcher/test/: EnvironmentSpec.hs  LauncherSMSpec.hs  LauncherSpec.hs  Spec.hs  TemplateSpec.hs  UpdaterSpec.hs  testDaedalusFrontend.sh  testUpdater.sh
cardano-shell/: cardano-shell.cabal
cardano-shell/app/NodeIPCClient/: Main.hs
cardano-shell/dhall/: linux64.dhall  macos64.dhall  mainnet.dhall  testnet.dhall  win64.dhall
cardano-shell/dhall/features/: blockchain.dhall  wallet.dhall
cardano-shell/dhall/types/: launcher.type  topology.type
cardano-shell/specs/: .gitignore  CardanoShellSpec.lhs  shell.nix
cardano-shell/specs/tla/: BoundedFIFO.tla  Launcher.tla  LauncherUpdateSystem.tla  UpdateSystemWallet.tla
cardano-shell/src/Cardano/Shell/: Lib.hs  Types.hs
cardano-shell/src/Cardano/Shell/NodeIPC/: Lib.hs  Message.hs  README.md
cardano-shell/test/: DaedalusIPCSpec.hs  NodeIPCSMSpec.hs  NodeIPCSpec.hs
cardano-shell/test/js/: mock-daedalus.js
configuration/: launcher-config.demo.yaml  log-configuration.yaml
configuration/launcher/: launcher-config.demo.yaml
dhall/: cluster.type  demo.dhall  installer.dhall  launcher.dhall  linux64.dhall  macos64.dhall  mainnet.dhall  newLauncher.dhall  os.type  staging.dhall  testnet.dhall  topology.dhall  win64.dhall
dhall/backend/: backend.dhall
dhall/features/: blockchain.dhall  logging.dhall  network.dhall  wallet.dhall
dhall/types/: topology.type
doc/: Cardano-shell-one-pager.odp  conf.py  index.rst
doc/.sphinx/: requirements.txt
doc/getting-started/: configuration.md  launcher.md
doc/planning/: milestones-shell.dot
docs/: Dhall.md  Document.md  Makefile  Update.md  Usage.md  update-system.md
docs/planning/: Makefile
nix/: .stack-pkgs.nix  cardano-prelude-test.nix  cardano-prelude.nix  cardano-shell.nix  default.nix  haskell.nix  iohk-common.nix  iohk-nix-src.json  iohk-nix.json  pkgs.nix  sources.json
nix/.stack.nix/: canonical-json.nix  cardano-launcher.nix  cardano-prelude-test.nix  cardano-prelude.nix  cardano-shell.nix  cborg.nix  contra-tracer.nix  default.nix  hedgehog.nix  iohk-monitoring.nix  plutus-prototype.nix
scripts/buildkite/: default.nix  rebuild.hs
scripts/nix/: fetchNixpkgs.nix  nixpkgs-src.json  release.nix  stack-shell.nix
specs/: CardanoShellSpec.lhs  Makefile  README.md  shell.nix
specs/tla/: .gitignore  BoundedFIFO.tla  Channel.tla  IPCProtocol.tla  InnerFIFO.tla  UpdateSystem.tla
src/: Lib.hs  Types.hs
src/Cardano/Shell/: DaedalusIPC.hs  Launcher.hs  Lib.hs  NodeIPC.hs  Presets.hs  Types.hs
src/Cardano/Shell/Configuration/: Lib.hs  Types.hs
src/Cardano/Shell/Constants/: CLI.hs  PartialTypes.hs  Types.hs
src/Cardano/Shell/Features/: Logging.hs  Networking.hs
src/Cardano/Shell/NodeIPC/: Example.hs  General.hs  Lib.hs  Message.hs  ServerExample.hs  SimplePortServer.hs
src/Cardano/Shell/NodeIPC/Example/: Node.hs  server.js
src/Cardano/Shell/Update/: Lib.hs  Types.hs
src/Configuration/: Generator.hs  Lib.hs  Types.hs
src/Dhall/: Config.hs  Types.hs
src/Features/: Logging.hs  Networking.hs
src/NodeIPC/: Example.hs  Lib.hs  Message.hs  Test.hs  server.js
src/NodeIPC/Example/: Node.hs  server.js
test/: DaedalusIPCSpec.hs  DhallConfigSpec.hs  LauncherSpec.hs  NodeIPCSMSpec.hs  NodeIPCSpec.hs  Spec.hs  UpdaterSpec.hs
weekly-reports/: 2018-12-06.md  2018-12-13.md  2019-01-03.md  2019-01-10.md  2019-01-17.md  2019-01-24.md
