name:           cardano-shell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/cardano-shell#readme>
category:       Currency
homepage:       https://github.com/input-output-hk/cardano-shell#readme
bug-reports:    https://github.com/input-output-hk/cardano-shell/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2018 IOHK
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/cardano-shell

library
  exposed-modules:
      Cardano.Shell.Lib
    , Cardano.Shell.Types
    -- Configuration
    , Cardano.Shell.Configuration.Types
    , Cardano.Shell.Configuration.Lib
    -- NodeIPC
    , Cardano.Shell.NodeIPC
    -- Update system
    , CardanoShellSpec
    , Cardano.Shell.Update.Types
    -- Constants
    , Cardano.Shell.Constants.Types
    , Cardano.Shell.Presets
    , Cardano.Shell.Features.Logging
  other-modules:
      Cardano.Shell.NodeIPC.Example
    , Cardano.Shell.NodeIPC.Lib
    , Cardano.Shell.NodeIPC.Message
  hs-source-dirs:
      app
    , src
    , specs
  build-depends:
      aeson
    , base >=4.11 && <5
    , binary
    , bytestring
    , Cabal
    , cardano-prelude
    , concurrency
    , containers
    , contravariant
    , dhall
    , directory
    , formatting
    , iohk-monitoring
    , process
    , QuickCheck
    , safe-exceptions
    , stm
    , text
    , transformers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable cardano-shell-exe
  main-is: Main.hs
  other-modules:
      Paths_cardano_shell
    , Cardano.Shell.Features.Logging
    , Cardano.Shell.Features.Networking
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
    -- util
    , safe-exceptions
    , stm
    -- features
    , iohk-monitoring
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable node-ipc
  main-is: Main.hs
  other-modules:
      Paths_cardano_shell
  hs-source-dirs:
      app/NodeIPC
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable cardano-launcher
  main-is: Main.hs
  other-modules:
      Paths_cardano_shell
  hs-source-dirs:
      app/Launcher
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
    , cardano-sl-x509
    -- conccurency
    , async
    -- process managment
    , process
    , turtle
    -- directory
    , directory
    , filepath
    -- formatting
    , formatting
    -- exception handling
    , safe-exceptions
    , turtle
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields                      

test-suite cardano-shell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cardano_shell
      DhallConfigSpec
      NodeIPCSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
    , dhall
    , safe-exceptions
    -- quickcheck
    , QuickCheck
    , hspec
    , hspec-contrib
    , concurrency
    , dejafu
    , hunit-dejafu
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
