cabal-version:  2.2
name:           cardano-shell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/cardano-shell#readme>
category:       Currency
homepage:       https://github.com/input-output-hk/cardano-shell#readme
bug-reports:    https://github.com/input-output-hk/cardano-shell/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2018 IOHK
license:        Apache-2.0
license-files:  LICENSE, NOTICE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md
    test/js/mock-daedalus.js

source-repository head
  type: git
  location: https://github.com/input-output-hk/cardano-shell

library
  exposed-modules:
      Cardano.Shell.Lib
    , Cardano.Shell.Types
    -- NodeIPC
    , Cardano.Shell.NodeIPC
    , Cardano.Shell.NodeIPC.General
    , Cardano.Shell.DaedalusIPC
    -- Update system
    , CardanoShellSpec
  other-modules:
      Cardano.Shell.NodeIPC.Lib
    , Cardano.Shell.NodeIPC.Message
    , Cardano.Shell.NodeIPC.ServerExample
  hs-source-dirs:
      src
    , specs
  build-depends:
      aeson
    , base >=4.11 && <5
    , binary
    , bytestring
    , Cabal
    , cardano-prelude
    , concurrency
    , containers
    , directory
    , formatting
    , process
    , QuickCheck
    , safe-exceptions
    , async
    , text
    , transformers
    , turtle
    , yaml
    , time-units
  if os(windows)
    build-depends:     Win32

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable node-ipc
  main-is: Main.hs
  other-modules:
      Paths_cardano_shell
  hs-source-dirs:
      app/NodeIPCClient
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable daedalus-ipc
  main-is: app/daedalus-ipc.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

test-suite cardano-shell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cardano_shell
      DaedalusIPCSpec
  if !os(windows)
    other-modules:
      NodeIPCSpec
      NodeIPCSMSpec

  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , cardano-shell
    , cardano-prelude
    , process
    -- quickcheck
    , QuickCheck
    -- SM
    , quickcheck-state-machine >= 0.6
    -- required because of QSM
    , tree-diff
    -- tests
    , hspec
  build-tool-depends:
      cardano-shell:daedalus-ipc
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
