cabal-version:  2.2
name:           cardano-launcher
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/cardano-shell#readme>
category:       Currency
homepage:       https://github.com/input-output-hk/cardano-shell#readme
bug-reports:    https://github.com/input-output-hk/cardano-shell/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2018 IOHK
license:        Apache-2.0
license-files:  LICENSE, NOTICE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/input-output-hk/cardano-shell

library
  exposed-modules:
      Cardano.Shell.Launcher
      -- Update system
    , Cardano.Shell.Update.Lib
    , Cardano.Shell.Update.Types
  hs-source-dirs:
      src
  build-depends:
      base >=4.11 && <5
    , Cabal
    , cardano-prelude
    , containers
    , directory
    , process
    , QuickCheck
    , text
    , turtle
  if os(windows)
    build-depends:     Win32

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable cardano-launcher
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-prelude
    , cardano-launcher
    , cardano-sl-x509
    -- directory
    , directory
    , filepath
    -- formatting
    , formatting
    -- exception handling
    , safe-exceptions

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

test-suite cardano-launcher-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      UpdaterSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-launcher
    , cardano-prelude
    -- quickcheck
    , QuickCheck
    -- tests
    , hspec
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

