cabal-version:  2.2
name:           cardano-launcher
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/cardano-shell#readme>
category:       Currency
homepage:       https://github.com/input-output-hk/cardano-shell#readme
bug-reports:    https://github.com/input-output-hk/cardano-shell/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2018 IOHK
license:        Apache-2.0
license-files:  LICENSE, NOTICE
build-type:     Simple
extra-source-files:
    configuration/launcher/jormungandr/launcher-config-qa.linux.yaml
    configuration/launcher/jormungandr/launcher-config-qa.windows.yaml

source-repository head
  type: git
  location: https://github.com/input-output-hk/cardano-shell

library
  exposed-modules:
      Cardano.Shell.Launcher
    , Cardano.Shell.Launcher.Types
      -- Update system
    , Cardano.Shell.Update.Lib
    , Cardano.Shell.Update.Types
      -- Other subsystems
    , Cardano.Shell.Application
    , Cardano.Shell.Template
    , Cardano.Shell.Environment
    , Cardano.Shell.CLI
    , Cardano.Shell.Configuration
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.11 && <5
    , Cabal
    , cardano-prelude
    , containers
    , directory
    , filepath
    , process
    , QuickCheck
    , text
    , turtle
    , yaml
    , time-units
    , mtl
    , optparse-applicative
    , cardano-sl-x509
    , safe-exceptions
    , x509-validation

  if os(windows)
    build-depends:     Win32

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wno-name-shadowing

executable cardano-launcher
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , cardano-prelude
    , cardano-launcher
    , cardano-sl-x509
    -- formatting
    , filepath
    , formatting
    -- logging
    , iohk-monitoring
    -- exception handling
    , safe-exceptions
    , text
    , silently
    , Cabal
    , process
    -- cli
    , optparse-applicative
    -- directory
    , directory

  if os(windows)
    ghc-options: -optl-mwindows

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable mock-daedalus-frontend
  main-is: Daedalus.hs
  hs-source-dirs:
      app/Mocks
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-prelude

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable mock-installer
  main-is: Installer.hs
  hs-source-dirs:
      app/Mocks
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-prelude

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

test-suite cardano-launcher-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      UpdaterSpec
    , LauncherSpec
    , LauncherSMSpec
    , TemplateSpec
    , EnvironmentSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-launcher
    , cardano-prelude
    , directory
    -- quickcheck
    , QuickCheck
    -- SM
    , quickcheck-state-machine >= 0.6
    -- required because of QSM
    , tree-diff
    -- tests
    , hspec
    , yaml
    , unordered-containers
    , vector
    , temporary
    , filepath
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

